filtro de nome de documento

--- a/Projeto/src/main/resources/templates/documents.html
+++ b/Projeto/src/main/resources/templates/documents.html
@@ -26,19 +26,15 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto">
-
-				<li class="nav-item"><a class="nav-link" href="/login">Login</a>
-				</li>
-
+				<li class="nav-item active"><a class="nav-link" href="/">Home
+				</a></li>
 				<li class="nav-item"><a class="nav-link" href="/updown">Download
 						e Upload</a></li>
 				<li class="nav-item"><a class="nav-link" href="/cadastro">Cadastro</a>
 				</li>
-				
+
 				<li class="nav-item"><a class="nav-link" href="/documentos">Documentos</a>
 				</li>
-				
-
 			</ul>
 			<span class="navbar-text"> Home Page </span>
 		</div>
@@ -68,7 +64,7 @@
 <footer class="page-footer font-small blue">
 
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">© 2021 Copyright:
+	<div class="footer-copyright text-center py-3">ï¿½ 2021 Copyright:
 		Sirius API</div>
 	<!-- Copyright -->
 
