--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -20,9 +20,15 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
+				<li class="nav-item active"><a class="nav-link" href="/">Home
+				</a></li>
+				<li class="nav-item"><a class="nav-link" href="/updown">Download
+						e Upload</a></li>
+				<li class="nav-item"><a class="nav-link" href="/cadastro">Cadastro</a>
+				</li>
+
+				<li class="nav-item"><a class="nav-link" href="/documentos">Documentos</a>
+				</li>
     </ul>
     <span class="navbar-text">
       Cadastro de Usuários
