projeto cria um novo documento (apenas arquivos e diretorios) a partir de um documento existente

--- a/Projeto/src/main/resources/templates/documents.html
+++ b/Projeto/src/main/resources/templates/documents.html
@@ -50,12 +50,21 @@
   <thead>
     <tr>
 	<th id="tableNome" scope="col">Documentos</th>
+	<th scope="col"></th>
+	<th scope="col"></th>
+	
     </tr>
   </thead>
   <tbody>
     <tr th:each="document:${documents}">
-	<td><a th:href="@{/codelist/{doc}(doc=${document})}"><span th:text="${document}"></span></a></td> 		           
-			            
+	<td><a th:href="@{/codelist/{doc}(doc=${document})}"><span th:text="${document}"></span></a></td> 	
+		           
+	<form th:action="@{/CompactFile}" method="GET">
+		<input type="hidden" name="source" th:value="${document}"/>
+		<td><input type="text" name="newDoc"/></td>
+		<td><input type="submit" class="btn btn-info" value="Novo documento a partir deste"></td>
+	</form>
+				            
     </tr>
   </tbody>
 </table>
