--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 				
 
 			</ul>
-			<span class="navbar-text"> Home Page </span>
+			<a class="navbar-text" href="\logout"> Logout </a>
 		</div>
 	</nav>
 
